fix small screen layout issue

--- a/FindBook/root/static/css/style.css
+++ b/FindBook/root/static/css/style.css
@@ -2,19 +2,24 @@ html,body{
     height:100%
 }
 
+div.fb-nav{
+    margin-left:0px;
+    margin-right:0px;
+}
+
 div.footer{
     clear:both;
     position:relative;
-    margin-top:-110px;
+    margin-top:-130px;
     width:100%;
-    height:110px;
+    height:130px;
     font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #f5f5f5;
     border-top: 1px solid #e5e5e5;
     font-size:12px;
 }
 
-p.ft-top{
+p.fb-ft-top{
     margin-top:20px;
 }
 
@@ -177,7 +182,7 @@ div.ra-tab-content {
 
 .aboutus-main{
     margin-top:60px;
-    margin-bottom:120px;
+    margin-bottom:150px;
     width:50%
 }
 
@@ -531,7 +536,9 @@ a.search-logo{
 }
 
 .aboutus-main{
-    width:80%
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
 }
 div#thx-modal{
     left:50%;
@@ -625,7 +632,9 @@ a.search-logo{
 }
 
 .aboutus-main{
-    width:100%
+    width:80%;
+    margin-left:auto;
+    margin-right:auto;
 }
 div#thx-modal{
     left:50%;
